@@ -1,7 +1,7 @@
 ﻿//------------------------------------------------------------------------------
 // <auto-generated>
 //     This code was generated by a tool.
-//     Runtime Version:4.0.30319.488
+//     Runtime Version:4.0.30319.239
 //
 //     Changes to this file may cause incorrect behavior and will be lost if
 //     the code is regenerated.
@@ -261,13 +261,13 @@ namespace MySql.Data.Entity.Tests.Properties {
         ///`Extent1`.`Name`, 
         ///`Join1`.`Id` AS `C1`, 
         ///`Join1`.`Name` AS `C2`, 
-        ///`Join1`.`Id` AS `C3`, 
-        ///`Join1`.`Name` AS `C4`
+        ///`Join1`.`ID1` AS `C3`, 
+        ///`Join1`.`NAME1` AS `C4`
         ///FROM `Companies` AS `Extent1` INNER JOIN (SELECT
         ///`UnionAll1`.`Id`, 
         ///`UnionAll1`.`Name`, 
-        ///`UnionAll2`.`Id` AS `Id1`, 
-        ///`UnionAll2`.`Name` AS `Name1`
+        ///`UnionAll2`.`Id` AS `ID1`, 
+        ///`UnionAll2`.`Name` AS `NAME1`
         ///FROM (SELECT
         ///`Extent2`.`Id`, 
         ///`Extent2`.`Name`
@@ -276,7 +276,7 @@ namespace MySql.Data.Entity.Tests.Properties {
         ///`Extent3`.`Name`
         ///FROM `Shops` AS `Extent3`) AS `UnionAll1` INNER JOIN (SELECT
         ///`Extent4`.`Id`, 
-        ///`Extent [rest of string was truncated]&quot;;.
+        ///`Exte [rest of string was truncated]&quot;;.
         /// </summary>
         internal static string JoinOfUnionsOnRightSideOfJoin {
             get {
