@@ -238,13 +238,13 @@ FROM `Toys` AS `Extent2`
 `Extent1`.`Name`, 
 `Join1`.`Id` AS `C2`, 
 `Join1`.`Name` AS `C3`, 
-`Join1`.`Id` AS `C4`, 
-`Join1`.`Name` AS `C5`
+`Join1`.`ID1` AS `C4`, 
+`Join1`.`NAME1` AS `C5`
 FROM `Companies` AS `Extent1` INNER JOIN (SELECT
 `UnionAll1`.`Id`, 
 `UnionAll1`.`Name`, 
-`UnionAll2`.`Id` AS `Id1`, 
-`UnionAll2`.`Name` AS `Name1`
+`UnionAll2`.`Id` AS `ID1`, 
+`UnionAll2`.`Name` AS `NAME1`
 FROM (SELECT
 `Extent2`.`Id`, 
 `Extent2`.`Name`
